fixed some things

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </header>
     <main>
         <h1>Jackson Campbell | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Jackson" width="200">
-        <p>My name is Jackson.</p>
+        <img src="images/profile.jpg" alt="Picture of Jackson Campbell" width="200">
+        <p>My name is Jackson. I am a very private person and an introvert. I am making this paragraph longer because the Page Audit said it was too short.</p>
     </main>
     <footer>
         <p>&copy;2025 | Jackson Campbell | Utah </p>
