--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jackson Campbell | WDD 130</title>
+    <meta name="description" content="Jackson Campbell home page for getting a good grade in">
+    <meta name="author" content="Jackson Campbell">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -18,6 +20,11 @@
         <img src="images/profile.jpg" alt="Picture of Jackson Campbell" width="200">
         <p>My name is Jackson. I am a very private person and an introvert. I am making this paragraph longer because the Page Audit said it was too short.</p>
     </main>
+    <aside>
+        <h2> Utah </h2>
+        <img src="images/Utah.jpg" alt="Picture of Utah">
+        <p>I live in Utah. It is a good place because we have trees. We also get snow in the winter. It is verry cold when that happens. But in the summer it is very hot.</p>
+    </aside>
     <footer>
         <p>&copy;2025 | Jackson Campbell | Utah </p>
     </footer>
