--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </main>
     <aside>
         <h2> Utah </h2>
-        <img src="images/Utah.jpg" alt="Picture of Utah">
+        <img src="images/utah.jpg" alt="Picture of Utah">
         <p>I live in Utah. It is a good place because we have trees. We also get snow in the winter. It is verry cold when that happens. But in the summer it is very hot.</p>
     </aside>
     <footer>
