--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jackson Campbell | WDD 130</title>
-    <meta name="description" content="Jackson Campbell home page for getting a good grade in">
+    <meta name="description" content="Jackson Campbell home page for getting a good grade in WWD 130">
     <meta name="author" content="Jackson Campbell">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
