--- a/index.html
+++ b/index.html
@@ -13,14 +13,21 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://linkedin.com">linkedin</a>
+            <a href="ttps://facebook.com.">Facebook</a>
         </nav>
     </header>
     <main>
         <h1>Jackson Campbell | WDD 130</h1>
         <img src="images/profile.jpg" alt="Picture of Jackson Campbell" width="200">
         <p>My name is Jackson. I am a very private person and an introvert. I am making this paragraph longer because the Page Audit said it was too short.</p>
+        <ul>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/ogden-utah-temple?lang=eng">Ogden Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/syracuse-utah-temple?lang=eng">Syracuse Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/salt-lake-temple?lang=eng">Salt Lake City Temple</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2> Utah </h2>
         <img src="images/utah.jpg" alt="Picture of Utah">
         <p>I live in Utah. It is a good place because we have trees. We also get snow in the winter. It is verry cold when that happens. But in the summer it is very hot.</p>
