--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/rafting.css">
-    <title>Document</title>
-    <meta name="description" content="Risk-Free Adventure, Fun, and Thrills!">
+    <title>R.A.F.T</title>
+    <meta name="description" content="About webpage for the R.A.F.T company (Risk-Free Adventure, Fun, and Thrills!).">
     <meta name="author" content="Jackson Campbell">
 </head>
 <body>
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="trpis.html">Trips</a></li>
+                <li><a href="trips.html">Trips</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
