--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/rafting.css">
-    <title>R.A.F.T</title>
+    <title>Risk-Free Adventure, Fun, and Thrills!</title>
     <meta name="description" content="About webpage for the R.A.F.T company (Risk-Free Adventure, Fun, and Thrills!).">
     <meta name="author" content="Jackson Campbell">
 </head>
