--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,7 +12,7 @@
     <header>
         <img src="images/logo.jpg" alt="wwr logo">
         <nav>
-            <ul>
+            <ul class="navigation">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="trips.html">Trips</a></li>
