--- a/wwr/about.html
+++ b/wwr/about.html
@@ -29,12 +29,28 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus consectetur vel consequatur itaque provident asperiores rem, ea perferendis perspiciatis accusantium dignissimos non distinctio quos minus at cum similique nemo quisquam!</p>
             </article>
         </div>
-        <section>
+        <section class="history">
             <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore officia pariatur accusantium quas, obcaecati consequatur doloremque beatae illo voluptas ab assumenda. Sunt deleniti animi pariatur debitis reiciendis ipsa dolores nam!</p>
-        </section>
-        <section>
+            <div>    
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore officia pariatur accusantium quas, obcaecati consequatur doloremque beatae illo voluptas ab assumenda. Sunt deleniti animi pariatur debitis reiciendis ipsa dolores nam!</p>
+                <img src="images/history.jpg" alt="history">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore officia pariatur accusantium quas, obcaecati consequatur doloremque beatae illo voluptas ab assumenda. Sunt deleniti animi pariatur debitis reiciendis ipsa dolores nam!</p>
+            </div>
+            </section>
+        <section class="adventure">
             <h2>Adventure Awaits You!</h2>
+            <div>
+                <img src="images/adventure.jpg" alt="adventure">
+                <img src="images/adventure.jpg" alt="adventure">
+                <img src="images/adventure.jpg" alt="adventure">
+                <img src="images/adventure.jpg" alt="adventure">
+                <img src="images/adventure.jpg" alt="adventure">
+                <p>capiton</p>
+                <p>capiton</p>
+                <p>capiton</p>
+                <p>capiton</p>
+                <p>capiton</p>
+            </div>
         </section>
     </main>
     <footer>
