--- a/wwr/about.html
+++ b/wwr/about.html
@@ -40,16 +40,26 @@
         <section class="adventure">
             <h2>Adventure Awaits You!</h2>
             <div>
-                <img src="images/adventure.jpg" alt="adventure">
-                <img src="images/adventure.jpg" alt="adventure">
-                <img src="images/adventure.jpg" alt="adventure">
-                <img src="images/adventure.jpg" alt="adventure">
-                <img src="images/adventure.jpg" alt="adventure">
-                <p>capiton</p>
-                <p>capiton</p>
-                <p>capiton</p>
-                <p>capiton</p>
-                <p>capiton</p>
+                <figure>
+                    <img src="images/adventure.jpg" alt="adventure">
+                    <figcaption>caption</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure.jpg" alt="adventure">
+                    <figcaption>caption</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure.jpg" alt="adventure">
+                    <figcaption>caption</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure.jpg" alt="adventure">
+                    <figcaption>caption</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure.jpg" alt="adventure">
+                    <figcaption>caption</figcaption>
+                </figure>
             </div>
         </section>
     </main>
