--- a/wwr/about.html
+++ b/wwr/about.html
@@ -33,7 +33,7 @@
             <h2>History</h2>
             <div>    
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore officia pariatur accusantium quas, obcaecati consequatur doloremque beatae illo voluptas ab assumenda. Sunt deleniti animi pariatur debitis reiciendis ipsa dolores nam!</p>
-                <img src="images/history.jpg" alt="history">
+                <img src="images/history2.jpg" alt="history">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore officia pariatur accusantium quas, obcaecati consequatur doloremque beatae illo voluptas ab assumenda. Sunt deleniti animi pariatur debitis reiciendis ipsa dolores nam!</p>
             </div>
             </section>
@@ -41,24 +41,24 @@
             <h2>Adventure Awaits You!</h2>
             <div>
                 <figure>
-                    <img src="images/adventure.jpg" alt="adventure">
-                    <figcaption>caption</figcaption>
+                    <img src="images/rivers.jpg" alt="rivers">
+                    <figcaption>Rivers!</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/adventure.jpg" alt="adventure">
-                    <figcaption>caption</figcaption>
+                    <img src="images/rafts.jpg" alt="rafts">
+                    <figcaption>Rafts!</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/adventure.jpg" alt="adventure">
-                    <figcaption>caption</figcaption>
+                    <img src="images/helmets.jpg" alt="helmets">
+                    <figcaption>Helmets!</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/adventure.jpg" alt="adventure">
-                    <figcaption>caption</figcaption>
+                    <img src="images/paddels.jpg" alt="paddels">
+                    <figcaption>Paddels!</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/adventure.jpg" alt="adventure">
-                    <figcaption>caption</figcaption>
+                    <img src="images/people-having-fun.jpg" alt="people having fun">
+                    <figcaption>Fun!</figcaption>
                 </figure>
             </div>
         </section>
