--- a/wwr/about.html
+++ b/wwr/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.jpg" alt="wwr logo">
+        <img src="images/logo.png" alt="wwr logo">
         <nav>
             <ul class="navigation">
                 <li><a href="index.html">Home</a></li>
