--- a/wwr/about.html
+++ b/wwr/about.html
@@ -23,7 +23,7 @@
     <main>
         <div class="hero">
             <img src="images/hero.jpg" alt="hero">
-            <h1>R.A.F.T</h1>
+            <h1 class="about-us">R.A.F.T</h1>
             <article>
                 <img src="images/happy-man.jpg" alt="Happy Man">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus consectetur vel consequatur itaque provident asperiores rem, ea perferendis perspiciatis accusantium dignissimos non distinctio quos minus at cum similique nemo quisquam!</p>
