--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/rafting.css">
-    <title>R.A.F.T Contact</title>
+    <title>R.A.F.T Contact Us</title>
     <meta name="description" content="Contact webpage for the R.A.F.T company (Risk-Free Adventure, Fun, and Thrills!).">
     <meta name="author" content="Jackson Campbell">
 </head>
@@ -22,7 +22,7 @@
     </header>
     <main>
         <section class="info">
-            <h2> R . A . F . T Company</h2>
+            <h1> R . A . F . T Company</h1>
             <p>123 Main River Street</p>
             <p>MyTown, USA</p>
             <p>+ 1 801 867 5309</p>
@@ -56,9 +56,9 @@
                 </div>
                 <div class="form-item">
                     <input type="checkbox" id="subscribe" name="subscribe">
-                    <label>Please Subscribe me to the monthly newsletter</label>
+                    <label for="subscribe">Please Subscribe me to the monthly newsletter</label>
                 </div>
-                <button>Get in Touch!</button>
+                <button type="submit">Get in Touch!</button>
             </form>
         </section>
         <section class="adventure">
