--- a/wwr/about.html
+++ b/wwr/about.html
@@ -38,7 +38,7 @@
             </div>
             </section>
         <section class="adventure">
-            <h2>Adventure Awaits You!</h2>
+            <h2 href="trips.html">Adventure Awaits You!</h2>
             <div>
                 <figure>
                     <img src="images/rivers.jpg" alt="rivers">
