--- a/wwr/about.html
+++ b/wwr/about.html
@@ -26,15 +26,15 @@
             <article>
                 <h1 class="about-us">R.A.F.T</h1>
                 <img src="images/happy-man.jpg" alt="Happy Man">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus consectetur vel consequatur itaque provident asperiores rem, ea perferendis perspiciatis accusantium dignissimos non distinctio quos minus at cum similique nemo quisquam!</p>
+                <p>Welcome to the R.A.F.T company (Risk-Free Adventure, Fun, and Thrills). Here we offer the most heigh quality, low cost services you can find. Enjoy our fammily friendly fun filled adventures without putting a dent in your wallet.</p>
             </article>
         </div>
         <section class="history">
             <h2>History</h2>
             <div>    
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore officia pariatur accusantium quas, obcaecati consequatur doloremque beatae illo voluptas ab assumenda. Sunt deleniti animi pariatur debitis reiciendis ipsa dolores nam!</p>
+                <p>Raft was initially started as a transport company. We primarly worked with exporting gold straight out of the mines, down the river, and accross the ocean.</p>
                 <img src="images/history2.jpg" alt="history">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore officia pariatur accusantium quas, obcaecati consequatur doloremque beatae illo voluptas ab assumenda. Sunt deleniti animi pariatur debitis reiciendis ipsa dolores nam!</p>
+                <p>Since then our primary objective is to provide our customer with a fun way to explore the water. Wether you are looking for an intense edventure, or just a relaxing way to spend your weekend, we've got it all. </p>
             </div>
             </section>
         <section class="adventure">
