--- a/wwr/index.html
+++ b/wwr/index.html
@@ -25,7 +25,7 @@
             <img src="images/hero.jpg" alt="hero">
             <article>
                 <h1 class="about-us">R.A.F.T</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus consectetur vel consequatur itaque provident asperiores rem, ea perferendis perspiciatis accusantium dignissimos non distinctio quos minus at cum similique nemo quisquam!</p>
+                <p>Welcome to the R.A.F.T company (Risk-Free Adventure, Fun, and Thrills). Here we offer the most heigh quality, low cost services you can find. Enjoy our fammily friendly fun filled adventures without putting a dent in your wallet. </p>
             </article>
         </div>
         <section class="contact">
