--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -28,7 +28,7 @@
             <p>+ 1 801 867 5309</p>
             <p>info@RAFT.com</p>
         </section>
-        <section class="contact">
+        <div class="contact">
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d21417.168999012658!2d-112.52325971282792!3d41.13463724887579!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1764105865271!5m2!1sen!2sus" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <form>
                 <div class="form-item">
@@ -60,7 +60,7 @@
                 </div>
                 <button type="submit">Get in Touch!</button>
             </form>
-        </section>
+        </div>
         <section class="adventure">
             <h2>We Are Here to Serve You</h2>
             <div>
